# tardi

./: .aider.conf.yml  .clinerules  .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  Justfile  LICENSE.txt  README.md  todo.txt  todos.txt
.github/workflows/: rust.yml
bootstrap/: 00-core-macros.tardi  01-stack-ops.tardi  02-core-ops.tardi
cline_docs/: active_context.md  function_roadmap.md  implementation_status.md  product_context.md  progress.md  project_brief.md  system_patterns.md  tech_context.md
docs/: arithmetic-operations.md  comparison-operators.md  control-flow.md  functions-and-macros.md  getting-started.md  hashmap-operations.md  index.md  io-operations.md  list-operations.md  module-system.md  return-stack-operations.md  stack-manipulation.md  string-operations.md  types-and-literals.md
src/: builtins.rs  chunk.rs  compiler.rs  config.rs  core.rs  env.rs  error.rs  image.rs  lib.rs  main.rs  op_code.rs  parser.rs  scanner.rs  shared.rs  tests.rs  value.rs  vm.rs
src/bootstrap/: 00-core-macros.tardi  01-stack-ops.tardi  02-core-ops.tardi  vectors.tardi
src/chunk/: tests.rs
src/compiler/: error.rs  mod.rs  program.rs  tests.rs
src/compiler/module/: internal.rs  mod.rs  tests.rs
src/compiler/module/internal/: strings.rs
src/config/: tests.rs
src/core/: mod.rs  tests.rs
src/data/: default_config.toml
src/env/: tests.rs
src/module/: internal.rs  mod.rs  tests.rs
src/module/internal/: .#io.rs  fs.rs  hashmaps.rs  internals.rs  io.rs  kernel.rs  sandbox.rs  scanning.rs  strings.rs  vectors.rs
src/module/internal/kernel/: loop_word.rs
src/parser/: tests.rs
src/scanner/: error.rs  mod.rs  tests.rs  token.rs
src/scanner/token/: mod.rs  tests.rs
src/value/: data.rs  frozen.rs  lambda.rs  tests.rs
src/value/io/: error.rs  mod.rs  reader.rs  writer.rs
src/vm/: mod.rs  ops.rs  tests.rs  value.rs
std/: hashmaps.tardi  math.tardi  strings.tardi  vectors.tardi
tardi/: Cargo.toml  README.md
tardi-cli/: Cargo.toml  README.md
tardi-cli/src/: error.rs  main.rs
tardi-cli/tests/: test_main.rs  test_scan.rs
tardi-cli/tests/fixtures/: hello-world.tardi  integers.stderr  integers.tardi
tardi-compiler/: Cargo.toml
tardi-compiler/src/: lib.rs
tardi-core/: Cargo.toml
tardi-core/src/: error.rs  lib.rs
tardi-core/src/env/: mod.rs
tardi-core/src/module/: mod.rs
tardi-core/src/op_code/: mod.rs
tardi-core/src/value/: mod.rs
tardi-scanner/: Cargo.toml
tardi-scanner/src/: lib.rs  tests.rs
tardi-scanner/src/tests/: integers.rs  strings.rs  words.rs
tardi/tests/: test_suite.toml
tests/: test_main.rs  test_repl.rs  test_suite.toml
tests/fixtures/: addition.tardi  address.tardi  arithmetic_operations.stderr  arithmetic_operations.tardi  basic-test.tardi  booleans.stderr  booleans.tardi  bootstrapping.stderr  bootstrapping.tardi  callstack_ops.stderr  callstack_ops.tardi  character_literals.stderr  character_literals.tardi  comments.stderr  comments.tardi  comparison_operators.stderr  comparison_operators.tardi  conditional.stderr  conditional.tardi  conditionals.stderr  conditionals.tardi  functions.stderr  functions.tardi  import_cycle_error.stderr  import_cycle_error.tardi  io.stderr  io.stdout  io.tardi  lambda.stderr  lambda.tardi  list_operations.stderr  list_operations.tardi  load_modules.tardi  loops.stderr  loops.tardi  math_operators.stderr  math_operators.tardi  mixed_namespaces.stderr  mixed_namespaces.tardi  return_stack_operations.stderr  (+15 more)
tests/modules/: basic-test.tardi  hello.tardi  import-cycle-1.tardi  import-cycle-2.tardi
tree-sitter-tardi/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-tardi/bindings/c/: tree-sitter-tardi.pc.in
tree-sitter-tardi/bindings/go/: binding.go  binding_test.go
tree-sitter-tardi/bindings/node/: binding.cc  index.js
tree-sitter-tardi/bindings/python/tests/: test_binding.py
tree-sitter-tardi/bindings/python/tree_sitter_tardi/: __init__.py  binding.c
tree-sitter-tardi/bindings/rust/: build.rs  lib.rs
tree-sitter-tardi/bindings/swift/TreeSitterTardi/: tardi.h
tree-sitter-tardi/bindings/swift/TreeSitterTardiTests/: TreeSitterTardiTests.swift
