[package]
name = "tardi"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
clap-verbosity-flag = "*"
confy = "*"
env_logger = "*"
human-panic = "*"
log = "*"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
datatest-stable = "0.3.2"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
pretty_assertions = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "*"

[[test]]
name = "test_main"
harness = false
