[package]
name = "tardi"
version = "0.3.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
clap-verbosity-flag = "*"
directories = "6.0.0"
env_logger = "*"
figment = { version = "0.10.19", features = [
  "env",
  "json",
  "serde_json",
  "serde_yaml",
  "toml",
  "yaml",
] }
human-panic = "*"
lazy_static = "1.5.0"
log = "*"
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
datatest-stable = "0.3.2"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
pretty_assertions = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "*"

[[test]]
name = "test_main"
harness = false
