[package]
name = "tardi"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
confy = "2.0.0"
env_logger = "0.11.8"
human-panic = "2.0.4"
log = "0.4.28"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
datatest-stable = "0.3.3"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
# rexpect = "*"
toml = "0.9.8"
# tempfile = "*"

[[test]]
name = "test_main"
harness = false
