[package]
name = "tardi-cli"
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
edition = "2018"

[[bin]]
name = "tardi-next"
path = "src/main.rs"

[dependencies]
clap = { version = "*", features = ["derive"] }
clap-verbosity-flag = "*"
confy = "*"
env_logger = "*"
human-panic = "*"
log = "*"

[dev-dependencies]
assert_cmd = "*"
# assert_fs = "*"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
pretty_assertions = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "*"
