[package]
name = "tardi-cli"
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
edition = "2024"

[[bin]]
name = "tardi-next"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
confy = "2.0.0"
env_logger = "0.11.0"
human-panic = "2.0.0"
log = "0.4.0"
tardi-core = { path = "../tardi-core/" }

[dev-dependencies]
assert_cmd = "2.0.0"
datatest-stable = "0.3.3"
# assert_fs = "*"
# dir-diff = "*"
# duct = "*"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
# rexpect = "*"
spectral = "0.6.0"
# tempfile = "*"

[[test]]
name = "test_main"
harness = false
